[gd_scene load_steps=4 format=3 uid="uid://bvrnihkl2vvp2"]

[ext_resource type="Script" uid="uid://5ekhr5q66dv3" path="res://ui/GameUI.gd" id="1_abcde"]
[ext_resource type="Texture2D" uid="uid://dm0egcynjygli" path="res://ui/panel_background.png" id="2_fghij"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_12345"]
texture = ExtResource("2_fghij")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_abcde")

[node name="NetworkUI" type="HBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_right = 200.0
offset_bottom = 40.0
grow_horizontal = 2
alignment = 1

[node name="CreateServerButton" type="Button" parent="NetworkUI"]
layout_mode = 2
text = "Create Server"

[node name="IPAddressLineEdit" type="LineEdit" parent="NetworkUI"]
layout_mode = 2
placeholder_text = "Enter IP Address"

[node name="JoinServerButton" type="Button" parent="NetworkUI"]
layout_mode = 2
text = "Join Server"

[node name="BottomBar" type="Panel" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_12345")

[node name="MainhandSlot" type="Panel" parent="BottomBar"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -40.0
offset_right = 100.0
offset_bottom = 40.0
grow_vertical = 2

[node name="OffhandSlot" type="Panel" parent="BottomBar"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -40.0
offset_right = -20.0
offset_bottom = 40.0
grow_horizontal = 0
grow_vertical = 2

[node name="Hotbar" type="HBoxContainer" parent="BottomBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -40.0
offset_right = 200.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ItemSlot1" type="Panel" parent="BottomBar/Hotbar"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="ItemSlot2" type="Panel" parent="BottomBar/Hotbar"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="ItemSlot3" type="Panel" parent="BottomBar/Hotbar"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="ItemSlot4" type="Panel" parent="BottomBar/Hotbar"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="ItemSlot5" type="Panel" parent="BottomBar/Hotbar"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
